[package]
name = "fetching"
authors = ["Emma Alexandria <emma.jellemabutler@gmail.com>"]
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["cargo", "derive", "string"] }
ratatui = { version = "0.29.0", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
toml = "0.9.6"
unicode-width = "0.2.0"
wild = "2.2.1"
